--- a/index.html
+++ b/index.html
@@ -33,20 +33,22 @@
       <div class="container">
         <h3>Каталог круизов</h3>
         <p class="sorting">Сортировать круизы по цене</p>
-        <div class="cards">
-          <div class="card"><img src="img/lighthouse.png" width="100%" alt="Lighthouse"/>
+        <div class="cards container_x clearfix">
+          <div class="card"><img src="img/lighthouse-desk.png" width="100%" alt="Lighthouse"/>
             <div class="card-description">
               <h4>
-                 Морской круиз <br/>в Анапу</h4>
+                 Морской круиз 
+                в Анапу
+              </h4>
               <div class="card-description__title">
                 <p>Маршрут: </p><span>Сочи-Лазаревское-Геленджик-Анапа</span><br/>
                 <p>Продолжительность: </p><span>10 ч. 0 мин.</span>
               </div>
               <div class="card-description__price">49 000 руб.</div>
-              <div class="card__special hit__special"><span>Хит продаж</span></div>
+              <div class="card__special hit__special"><span>Хит продаж		</span></div>
             </div>
           </div>
-          <div class="card"><img src="img/kater.png" width="100%" alt="Kater"/>
+          <div class="card"><img src="img/kater-desk.png" width="100%" alt="Kater"/>
             <div class="card-description">
               <h4>Обзорная морская прогулка с экскурсией</h4>
               <div class="card-description__title">
@@ -58,7 +60,7 @@
               <div class="card__special discount__special"><span>Акция</span></div>
             </div>
           </div>
-          <div class="card"><img src="img/beach.png" width="100%" alt="Beach"/>
+          <div class="card"><img src="img/beach-desk.png" width="100%" alt="Beach"/>
             <div class="card-description">
               <h4>Морская прогулка в&nbspГеленджик</h4>
               <div class="card-description__title">
@@ -69,12 +71,22 @@
               <div class="card__special discount__special"><span>Скидка 10%</span></div>
             </div>
           </div>
-          <div class="card"><img src="img/harbor.png" width="100%" alt="Lighthouse"/>
+          <div class="card"><img src="img/harbor-desk.png" width="100%" alt="Harbor"/>
             <div class="card-description">
               <h4>Морской круиз в&nbspНовороссийск</h4>
               <div class="card-description__title">
                 <p>Маршрут: </p><span>Сочи-Геленджик-Новороссйиск-Геленджик-Сочи</span><br/>
                 <p>Продолжительность: </p><span>13 ч. 0 мин.</span>
+              </div>
+              <div class="card-description__price">14 800 руб.</div>
+            </div>
+          </div>
+          <div class="card"><img src="img/sea-desk.png" width="100%" alt="Sea"/>
+            <div class="card-description">
+              <h4>Морская прогулка в Абрау-Дюрсо  </h4>
+              <div class="card-description__title">
+                <p>Маршрут: </p><span>Сочи-Абрау-Дюрсо</span><br/>
+                <p>Продолжительность: </p><span>11 ч. 0 мин.</span>
               </div>
               <div class="card-description__price">14 800 руб.</div>
             </div>
