--- a/index.html
+++ b/index.html
@@ -34,44 +34,57 @@
         <h3>Каталог круизов</h3>
         <p class="sorting">Сортировать круизы по цене</p>
         <div class="cards container_x clearfix">
-          <div class="card"><img src="img/lighthouse-desk.png" width="100%" alt="Lighthouse"/>
+          <div class="card">
+            <picture>
+              <source srcset="img/lighthouse.png" media="(max-width: 767px)"/>
+              <source srcset="img/lighthouse-desk.png" media="(min-width: 1200px)"/><img src="img/lighthouse.png" alt="Lighthouse"/>
+            </picture>
             <div class="card-description">
-              <h4>
-                 Морской круиз 
-                в Анапу
-              </h4>
+              <h4>Морской круиз в&nbspАнапу</h4>
               <div class="card-description__title">
                 <p>Маршрут: </p><span>Сочи-Лазаревское-Геленджик-Анапа</span><br/>
                 <p>Продолжительность: </p><span>10 ч. 0 мин.</span>
               </div>
               <div class="card-description__price">49 000 руб.</div>
-              <div class="card__special hit__special"><span>Хит продаж		</span></div>
             </div>
+            <div class="card__special hit__special"><span>Хит продаж		</span></div>
           </div>
-          <div class="card"><img src="img/kater-desk.png" width="100%" alt="Kater"/>
+          <div class="card">
+            <picture>
+              <source srcset="img/kater.png" media="(max-width: 767px)"/>
+              <source srcset="img/kater-desk.png" media="(min-width: 1200px)"/><img src="img/kater.png" alt="Kater"/>
+            </picture>
             <div class="card-description">
-              <h4>Обзорная морская прогулка с экскурсией</h4>
+              <h4>Обзорная морская прогулка с&nbspэкскурсией</h4>
               <div class="card-description__title">
                 <p>Маршрут: </p><span>
                    Сочи-Адлер-Сочи<br/>(без высадки)</span><br/>
                 <p>Продолжительность: </p><span>1 ч. 0 мин.</span>
               </div>
               <div class="card-description__price">5 000 руб. <span class="out">15 000 руб.</span></div>
-              <div class="card__special discount__special"><span>Акция</span></div>
             </div>
+            <div class="card__special discount__special"><span>Акция</span></div>
           </div>
-          <div class="card"><img src="img/beach-desk.png" width="100%" alt="Beach"/>
+          <div class="card">
+            <picture>
+              <source srcset="img/beach.png" media="(max-width: 767px)"/>
+              <source srcset="img/beach-desk.png" media="(min-width: 1200px)"/><img src="img/beach.png" alt="Beach"/>
+            </picture>
             <div class="card-description">
               <h4>Морская прогулка в&nbspГеленджик</h4>
               <div class="card-description__title">
                 <p>Маршрут: </p><span>Сочи-Туапсе-Геленджик</span><br/>
                 <p>Продолжительность: </p><span>12 ч. 30 мин.</span>
               </div>
-              <div class="card-description__price">7 000 руб. <span class="out">15 000 руб.</span></div>
-              <div class="card__special discount__special"><span>Скидка 10%</span></div>
+              <div class="card-description__price">7 000 руб. <span class="out">10 000 руб.</span></div>
             </div>
+            <div class="card__special discount__special"><span>Скидка 10%</span></div>
           </div>
-          <div class="card"><img src="img/harbor-desk.png" width="100%" alt="Harbor"/>
+          <div class="card">
+            <picture>
+              <source srcset="img/harbor.png" media="(max-width: 767px)"/>
+              <source srcset="img/harbor-desk.png" media="(min-width: 1200px)"/><img src="img/harbor.png" alt="Harbor"/>
+            </picture>
             <div class="card-description">
               <h4>Морской круиз в&nbspНовороссийск</h4>
               <div class="card-description__title">
@@ -81,9 +94,13 @@
               <div class="card-description__price">14 800 руб.</div>
             </div>
           </div>
-          <div class="card"><img src="img/sea-desk.png" width="100%" alt="Sea"/>
+          <div class="card">
+            <picture>
+              <source srcset="img/sea.png" media="(max-width: 767px)"/>
+              <source srcset="img/sea-desk.png" media="(min-width: 1200px)"/><img src="img/sea.png" alt="Sea"/>
+            </picture>
             <div class="card-description">
-              <h4>Морская прогулка в Абрау-Дюрсо  </h4>
+              <h4>Морская прогулка в&nbspАбрау-Дюрсо  </h4>
               <div class="card-description__title">
                 <p>Маршрут: </p><span>Сочи-Абрау-Дюрсо</span><br/>
                 <p>Продолжительность: </p><span>11 ч. 0 мин.</span>
