--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700|Roboto+Slab&amp;amp;subset=cyrillic-ext" rel="stylesheet"/>
 <link rel="stylesheet" href="css/style.css"/>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+<meta name="viewport" content="width=device-width"/>
 <body>
   <header>
     <nav class="navigation">
